Use Java 11 (#2)
* Use Java 11

* Update compiler plugin config